--- a/src/pages/Page.css
+++ b/src/pages/Page.css
@@ -2785,9 +2785,11 @@
   line-height: 1.2;
 }
 
+
 .testimonial-handle {
+
   font-size: 0.875rem;
-  color: rgba(255, 255, 255, 0.7);
+  color: white;
   margin: 0;
   line-height: 1.2;
 }
